# lvc

./: .gitignore  CMakeLists.txt  license  readme.md
app/:  commands.cpp  commands.hpp  main.cpp  state.hpp
app/storage/: database.cpp  database.hpp  file.cpp  file.hpp
